docs/apache-airflow-providers-amazon/9.4.0/_sources/_api/airflow/providers/amazon/aws/triggers/glue/index.rst.txt
airflow.providers.amazon.aws.triggers.glue
==========================================

.. py:module:: airflow.providers.amazon.aws.triggers.glue


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.glue.GlueJobCompleteTrigger
   airflow.providers.amazon.aws.triggers.glue.GlueCatalogPartitionTrigger
   airflow.providers.amazon.aws.triggers.glue.GlueDataQualityRuleSetEvaluationRunCompleteTrigger
   airflow.providers.amazon.aws.triggers.glue.GlueDataQualityRuleRecommendationRunCompleteTrigger


Module Contents
---------------

.. py:class:: GlueJobCompleteTrigger(job_name, run_id, verbose, aws_conn_id, job_poll_interval)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Watches for a glue job, triggers when it finishes.

   :param job_name: glue job name
   :param run_id: the ID of the specific run to watch for that job
   :param verbose: whether to print the job's logs in airflow logs or not
   :param aws_conn_id: The Airflow connection used for AWS credentials.


   .. py:attribute:: job_name


   .. py:attribute:: run_id


   .. py:attribute:: verbose


   .. py:attribute:: aws_conn_id


   .. py:attribute:: job_poll_interval


   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



.. py:class:: GlueCatalogPartitionTrigger(database_name, table_name, expression = '', waiter_delay = 60, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Asynchronously waits for a partition to show up in AWS Glue Catalog.

   :param database_name: The name of the catalog database where the partitions reside.
   :param table_name: The name of the table to wait for, supports the dot
       notation (my_database.my_table)
   :param expression: The partition clause to wait for. This is passed as
       is to the AWS Glue Catalog API's get_partitions function,
       and supports SQL like notation as in ``ds='2015-01-01'
       AND type='value'`` and comparison operators as in ``"ds>=2015-01-01"``.
       See https://docs.aws.amazon.com/glue/latest/dg/aws-glue-api-catalog-partitions.html
       #aws-glue-api-catalog-partitions-GetPartitions
   :param aws_conn_id: ID of the Airflow connection where
       credentials and extra configuration are stored
   :param region_name: Optional aws region name (example: us-east-1). Uses region from connection
       if not specified.
   :param waiter_delay: Number of seconds to wait between two checks. Default is 60 seconds.


   .. py:attribute:: database_name


   .. py:attribute:: table_name


   .. py:attribute:: expression
      :value: ''



   .. py:attribute:: waiter_delay
      :value: 60



   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: region_name
      :value: None



   .. py:attribute:: verify
      :value: None



   .. py:attribute:: botocore_config
      :value: None



   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:property:: hook
      :type: airflow.providers.amazon.aws.hooks.glue_catalog.GlueCatalogHook



   .. py:method:: poke(client)
      :async:



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



.. py:class:: GlueDataQualityRuleSetEvaluationRunCompleteTrigger(evaluation_run_id, waiter_delay = 60, waiter_max_attempts = 75, aws_conn_id = 'aws_default')

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when a AWS Glue data quality evaluation run complete.

   :param evaluation_run_id: The AWS Glue data quality ruleset evaluation run identifier.
   :param waiter_delay: The amount of time in seconds to wait between attempts. (default: 60)
   :param waiter_max_attempts: The maximum number of attempts to be made. (default: 75)
   :param aws_conn_id: The Airflow connection used for AWS credentials.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: GlueDataQualityRuleRecommendationRunCompleteTrigger(recommendation_run_id, waiter_delay = 60, waiter_max_attempts = 75, aws_conn_id = 'aws_default')

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when a AWS Glue data quality recommendation run complete.

   :param recommendation_run_id: The AWS Glue data quality rule recommendation run identifier.
   :param waiter_delay: The amount of time in seconds to wait between attempts. (default: 60)
   :param waiter_max_attempts: The maximum number of attempts to be made. (default: 75)
   :param aws_conn_id: The Airflow connection used for AWS credentials.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



